revisionOnExternalAndTrees